# hen

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE.txt  README.md  build.sh
Environment/: Environment.json  LLRegistry.json  Project.json  Stubs.h  UserManual.txt
Environment/Debugger/Prompts/: Breakpoints.txt  BreakpointsLLDB.txt  DebuggerRole.txt  FixFunction.txt  LLDBAnalysis.txt  LogDescription.txt  NextStep.txt  NextStepInstructions.txt  Programming.txt  RegexContractDefinition.txt  ReviewFixStep.txt  RewardHacking.txt  RunAnalysis.txt  RunAnalysisLLDBOnly.txt  RunAnalysisSpecialFrames.txt  RunAnalysisTraceOnly.txt  SpecialFramesAnalysis.txt  SummarizeTrajectory.txt  SystemAnalysis.txt  SystemDebugAnalysis.txt  TraceAnalysis.txt  TraceDescription.txt  Workflow.txt
Environment/Debugger/Scripts/: crash_handler.py  lldb_cmds.txt  lldb_cmds_san.txt  upload_hf_jsonl.sh
Environment/Distillery/: README.md
Environment/Distillery/Prompts/: AnalyzeTrajectory.txt  DistillDebugAnalysis.txt  DistillSpecialFramesAnalysis.txt  DistillStep.txt  DistillSummary.txt  DistillSystemAnalysis.txt  DistillSystemDebugAnalysis.txt  DistillationWorkflow.txt  DistilleryRole.txt  GoodAlternative.txt  OptimizeFixTrack.txt  OptimizeFixTrackEpilog.txt  OptimizeFixTrackInfo.txt  SystemAnalysis.txt  Thinking.txt
Environment/Distillery/Scripts/: build_hen_cpt.py  extract_dbg_rare_tracks.py  generate_dbg_dpo.py  test_build_hen_cpt.py  test_extract_dbg_rare_tracks.py  test_generate_dbg_dpo.py
Environment/Prompts/: AbstractProgramming.txt  AnalyzeDataRequirements.txt  CodingStyle.txt  CommonSource.h  CompareData.txt  CompareFunctions.txt  DefineData.txt  DefineDataLoop.txt  DefineDataRequest.txt  DefineFunction.txt  DefineFunctionSignatures.txt  DefineStructMembers.txt  DefineTest.txt  DefineTestFile.txt  DescribeFunction.txt  FindInLibrary.txt  FixCompilation.txt  FixSourceAfterTest.txt  GenerateArtifacts.txt  GenerateReadme.txt  ImplementMain.txt  ImplementSource.txt  ImplementTest.txt  ImproveUnitTest.txt  Libraries.txt  ListFunctions.txt  NeedsToImproveUnitTest.txt  Planing.txt  ProblemDecompose.txt  ProjDescFromConversation.txt  ProjItemsFromDesc.txt  ProjectDescription.txt  RefactorOriginalSource.txt  RefactorTruncatedSource.txt  ReviewCompareFunctions.txt  ReviewCompilation.txt  ReviewCompilationLib.txt  ReviewCompilationLuck.txt  ReviewCompilationOptions.txt  ReviewCompilationPanic.txt  (+28 more)
Environment/include_overrides/cpprest/: streams.h
Environment/source/: black_box_api.h  common.h  common_debug.h  common_eval.h
Projects/: README.md
Projects/clcalc/: Description.txt
Projects/clcalc/tests/: config.json
Projects/clcalc/tests/default/public/: test.json
Projects/clcalc/tests/step0/public/: test.json
Projects/clcalc/tests/step1/public/: test.json
Projects/clcalc/tests/step2/public/: test.json
Projects/clcalc/tests/step3/public/: test.json
Projects/clcalc/tests/step4/public/: test.json
Projects/clcalc/tests/step5/public/: test.json
Projects/math3d/: Description.txt
Projects/math3d/tests/: config.json
Projects/math3d/tests/default/public/: scene.m3d  test.json
Projects/math3d/tests/step0/public/: test.json
Projects/math3d/tests/step1/public/: test.json
Projects/math3d/tests/step2/public/: test.json
Projects/math3d/tests/step3/public/: test.json
Projects/math3d/tests/step4/public/: test.json
Projects/math3d/tests/step5/public/: test.json
Projects/math3d/tests/step6/public/: test.json  transform.m3d
Projects/mini2d_tilegame/: Description.txt
Projects/mini2d_tilegame/tests/: config.json
Projects/ocr8/: Description.txt
Projects/poseblend/: Description.txt
Projects/sgps/: Description.txt
Projects/simplec/: Description.txt
Projects/simplec/tests/: config.json
Projects/tinyvm/: Description.txt
SimpleC/tests/: config.json
SimpleC/tests/default/public/: test.json
SimpleC/tests/step0/public/: s0.c  test.json
SimpleC/tests/step1/public/: s1.c  test.json
SimpleC/tests/step2_1/public/: s2_1.c  test.json
SimpleC/tests/step3/public/: s3.c  test.json
SimpleC/tests/step4/public/: test.json
SimpleC/tests/step5/public/: test.json
SimpleC/tests/step6/public/: s6.c  test.json
SimpleC/tests/step7/public/: test.json
SimpleC/tests_extended/: config.json
SimpleC/tests_extended/default/public/: test.json
SimpleC/tests_extended/step0/public/: test.json
SimpleC/tests_extended/step1/public/: test.json
SimpleC/tests_extended/step4/public/: test.json
SimpleC/tests_extended/step5/public/: test.json
SimpleC/tests_extended/step7/public/: test.json
docs/: STRUCTURED_PROGRAM_DECOMPOSITION_V1.md  architecture-overview.md  future-debugger-notes.md  open-source-release-checklist.md
src/: AgentToChatServer.cpp  AgentToLLMServer.cpp  Artifacts.cpp  Artifacts.h  BlackBox.cpp  BlackBox.h  CCodeAnalysis.cpp  CCodeNode.cpp  CCodeNode.h  CCodeProject.cpp  CCodeProject.h  Client.cpp  Client.h  ClientServer.cpp  ClientServer.h  CompilationAnalysis.c  CreditSystem.cpp  CreditSystem.h  Data.cpp  Data.h  DebugContextProvider.h  Debugger.cpp  Debugger.h  Distillery.cpp  Distillery.h  File.cpp  File.h  Function.cpp  Function.h  Graph.h  Graph.hpp  IncludeBoost.h  Indent.h  Inferencing.cpp  Inferencing.h  LLMConfig.cpp  LLMConfig.h  LogAnalyzer.h  Node.cpp  Node.h  (+22 more)
(+225 files in other folders)
